--- a/Travelers/Storyboards/Camera.storyboard
+++ b/Travelers/Storyboards/Camera.storyboard
@@ -16,14 +16,80 @@
                     <view key="view" contentMode="scaleToFill" id="FSG-0e-Z2r">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4x1-BP-bXq">
+                                <rect key="frame" x="0.0" y="64" width="375" height="100"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder-photo" translatesAutoresizingMaskIntoConstraints="NO" id="lqc-9B-59P">
+                                        <rect key="frame" x="8" y="10" width="80" height="80"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="PwR-TK-dQd"/>
+                                            <constraint firstAttribute="height" constant="80" id="ZnI-MA-uvZ"/>
+                                        </constraints>
+                                    </imageView>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="imI-qa-Zkb">
+                                        <rect key="frame" x="96" y="10" width="271" height="80"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="9kb-wN-JGI"/>
+                                    <constraint firstItem="lqc-9B-59P" firstAttribute="top" secondItem="4x1-BP-bXq" secondAttribute="top" constant="10" id="D2I-OM-rmF"/>
+                                    <constraint firstAttribute="trailing" secondItem="imI-qa-Zkb" secondAttribute="trailing" constant="8" id="Dl5-ZN-V1M"/>
+                                    <constraint firstItem="imI-qa-Zkb" firstAttribute="leading" secondItem="lqc-9B-59P" secondAttribute="trailing" constant="8" id="bof-aD-piH"/>
+                                    <constraint firstAttribute="bottom" secondItem="imI-qa-Zkb" secondAttribute="bottom" constant="10" id="d5o-fp-drU"/>
+                                    <constraint firstItem="imI-qa-Zkb" firstAttribute="top" secondItem="4x1-BP-bXq" secondAttribute="top" constant="10" id="fbR-kP-tVh"/>
+                                    <constraint firstAttribute="bottom" secondItem="lqc-9B-59P" secondAttribute="bottom" constant="10" id="wDm-u6-phU"/>
+                                    <constraint firstItem="lqc-9B-59P" firstAttribute="leading" secondItem="4x1-BP-bXq" secondAttribute="leading" constant="8" id="xC4-hq-wnk"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WyI-YW-EkI">
+                                <rect key="frame" x="8" y="609" width="359" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="pdU-n9-qYD"/>
+                                </constraints>
+                                <state key="normal" title="Share">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="shareButton_TouchUpInside:" destination="iji-8J-uMb" eventType="touchUpInside" id="SdY-dQ-Ie2"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.8862745098" green="0.8862745098" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="4x1-BP-bXq" firstAttribute="top" secondItem="yye-Wi-fHM" secondAttribute="top" id="71p-uZ-nay"/>
+                            <constraint firstItem="4x1-BP-bXq" firstAttribute="leading" secondItem="yye-Wi-fHM" secondAttribute="leading" id="Dwj-h4-vaO"/>
+                            <constraint firstItem="yye-Wi-fHM" firstAttribute="trailing" secondItem="WyI-YW-EkI" secondAttribute="trailing" constant="8" id="P7S-A5-XK1"/>
+                            <constraint firstItem="yye-Wi-fHM" firstAttribute="bottom" secondItem="WyI-YW-EkI" secondAttribute="bottom" constant="8" id="ekN-Zr-NcX"/>
+                            <constraint firstItem="WyI-YW-EkI" firstAttribute="leading" secondItem="yye-Wi-fHM" secondAttribute="leading" constant="8" id="oZw-dI-XSL"/>
+                            <constraint firstItem="4x1-BP-bXq" firstAttribute="trailing" secondItem="yye-Wi-fHM" secondAttribute="trailing" id="pxP-Mz-7Ia"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="yye-Wi-fHM"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Camera" id="1dO-r3-FJf"/>
+                    <navigationItem key="navigationItem" title="Camera" id="1dO-r3-FJf">
+                        <barButtonItem key="leftBarButtonItem" title="Remove" id="2rJ-Ri-fAH">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="remove_TouchUpInside:" destination="iji-8J-uMb" id="xNr-EV-jLK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="captionTextView" destination="imI-qa-Zkb" id="mu0-DT-V0O"/>
+                        <outlet property="photo" destination="lqc-9B-59P" id="1xa-I1-y6M"/>
+                        <outlet property="removeButton" destination="2rJ-Ri-fAH" id="GYb-Yp-5DD"/>
+                        <outlet property="shareButton" destination="WyI-YW-EkI" id="zz2-hq-fsX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DcH-uP-Wiz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1289" y="313"/>
+            <point key="canvasLocation" x="1288.8" y="312.59370314842579"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="J03-Cn-qiw">
@@ -49,5 +115,6 @@
     </scenes>
     <resources>
         <image name="Photo" width="22" height="23"/>
+        <image name="placeholder-photo" width="840" height="600"/>
     </resources>
 </document>
